commons-extension-webapp/src/main/webapp/ckeditorCustom/contents.css
/*
Copyright (c) 2003-2015, CKSource - Frederico Knabben. All rights reserved.
For licensing, see LICENSE.md or http://ckeditor.com/license
*/

@import "/rest/v1/platform/branding/css";

@font-face {
	font-family: 'PLF-FONT-ICONS';
	src: url('/platform-ui/skin/fonts/PLF-FONT-ICONS.eot?-m9uidt');
	src: url('/platform-ui/skin/fonts/PLF-FONT-ICONS.eot?#iefix-m9uidt') format('embedded-opentype'), url('/platform-ui/skin/fonts/PLF-FONT-ICONS.ttf?-m9uidt') format('truetype'), url('/platform-ui/skin/fonts/PLF-FONT-ICONS.woff?-m9uidt') format('woff'), url('/platform-ui/skin/fonts/PLF-FONT-ICONS.svg?-m9uidt#PLF-FONT-ICONS') format('svg');
	font-weight: normal;
	font-style: normal;
}

body
{
	/* Font */
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-size: 12px;

	/* Text color */
	color: #333;

	/* Remove the background color to make it transparent */
	background-color: transparent;

	margin: 20px;
}

.cke_editable
{
	font-size: 13px;
	line-height: 1.6;
}

blockquote
{
	font-style: italic;
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  margin: 20px 0 7px 20px;
  padding: 10px 0 10px 10px !important;
	border-color: #ccc;
	border-width: 0;
	border-style: solid;
  background: var(--allPagesBaseBackground, #ffffff);
  border-left: 5px solid var(--allPagesPrimaryColor, #3f8487) !important;
}

.cke_contents_ltr blockquote
{
	padding-left: 20px;
	padding-right: 8px;
	border-left-width: 5px;
}

.cke_contents_rtl blockquote
{
	padding-left: 8px;
	padding-right: 20px;
	border-right-width: 5px;
}

a
{
	color: #0782C1;
}

ol,ul,dl
{
  margin: 0 0 10px 25px;
	/* preserved spaces for list items with text direction other than the list. (#6249,#8049)*/
	padding: 0 25px;
}

ul li, ol li {
  list-style: revert;
}

h1,h2,h3,h4,h5,h6
{
	font-weight: normal;
	line-height: 1.2;
}

hr
{
	border: 0px;
	border-top: 1px solid #ccc;
}

img.right
{
	border: 1px solid #ccc;
	float: right;
	margin-left: 15px;
	padding: 5px;
}

img.left
{
	border: 1px solid #ccc;
	float: left;
	margin-right: 15px;
	padding: 5px;
}

pre
{
	white-space: pre-wrap; /* CSS 2.1 */
	word-wrap: break-word; /* IE7 */
	-moz-tab-size: 4;
	-o-tab-size: 4;
	-webkit-tab-size: 4;
	tab-size: 4;
}

.marker
{
	background-color: Yellow;
}

span[lang]
{
	font-style: italic;
}

figure
{
	text-align: center;
	border: solid 1px #ccc;
	border-radius: 2px;
	background: rgba(0,0,0,0.05);
	padding: 10px;
	margin: 10px 20px;
	display: inline-block;
}

figure > figcaption
{
	text-align: center;
	display: block; /* For IE8 */
}

a > img {
	padding: 1px;
	margin: 1px;
	border: none;
	outline: 1px solid #0782C1;
}

ul li {
	list-style-type: disc;
}
.cke_widget_selectImage {
  max-width: 100%;
  margin: 0 10px 10px 0;
}
.cke_widget_selectImage img {
  max-width: 100%;
  text-align: center;
}
.dragEntered {
  background-color: rgba(1,1,1,0.03);
}
.dragEntered * {
    display: none;
    pointer-events: none;
}

/* custom classes for images alignement */
.pull-left {
	float: left;
}
.pull-right {
	float: right;
}
.text-center {
	text-align: center;
}

